--- a/neo/templates/near.html
+++ b/neo/templates/near.html
@@ -204,8 +204,7 @@
                                 background: '#7bd655'
                             }
                         }
-                        nodeset.update(clickNode);                
-
+                        nodeset.update(clickNode);
                     });
                     $("#mytable tbody").on("mouseout","tr",function()
                     {//给tr或者td添加click事件
@@ -249,6 +248,7 @@
         });
         function draw() 
         {
+            console.log("draw")
             var container = document.getElementById('mynetwork');
             nodeset = new vis.DataSet(nodes)
             var data = {
@@ -280,11 +280,49 @@
             network.on("doubleClick", function(params) {//双击事件
                 if (params.nodes.length != 0) {//确定为节点双击事件
                     var click_node_id = params.nodes[0];
-                    params.nodes[0]
+
+                    maxn = $("#hid").val();
+                    var mr = 1;
                     //remove_all_sub_nodes(click_node_id);
                     //console.log(click_node_id);
-                    $("#pname").val(click_node_id);
-                    $("#btn-commit").trigger("click");
+                    //$("#pname").val(click_node_id);
+                    // $("#btn-commit").trigger("click");
+                    $.get("http://183.174.228.21:1241/find_near",{'pname':click_node_id,'maxnear':maxn,'mr':mr}, function(ret){
+                    console.log(ret);
+                    for(var i in ret){
+                        exist = 0
+                        for(var j in nodes){
+                            if(ret[i]['end.name'] == nodes[j]['id']){
+                                exist = 1;break;
+                            }
+                        }
+                        if(!exist){
+                            nodes.push({id:ret[i]['end.name'],label:ret[i]["end.name"]})
+                            edges.push({from:ret[i]['n.name'],to:ret[i]['end.name'],value:ret[i]['r.value'],title:ret[i]['r.value']})
+                        }
+                    }
+                    draw();
+                    //str = "<h3><span id='resulttitle'></span></h3><table class='table table-striped table-hover ' style='width:100%' id='mytable'><thead><th>姓名</th><th>亲密度</th><th>时事探针</th></thead><tbody>";
+                    //if(ret.length==0){
+                    //    alert("没有找到这个人的信息，输一个我知道的人吧！");
+                    //    return ;
+                    //}
+                    /*for(var i in ret){
+                        if(ret[i]["end.name"] == name) continue;
+                        node = {id:ret[i]["end.name"],label:ret[i]["end.name"]};
+                        edge = {from:ret[i]['n.name'],to:ret[i]["end.name"],value:ret[i]["r.value"],title:ret[i]["r.value"]}
+                        if(ret[i]['n.name'] == name){
+                            nodes.push(node)
+                            str += "<tr class='mytr'><td>"+ ret[i]['end.name']+"</td>"+"<td>"+ret[i]["r.value"]+"</td>"+"<td><a href='"+
+                                "http://playbigdata.com/wwj/search2.aspx?q="+encodeURIComponent(ret[i]['end.name'])+"&t='>链接</a>"+"</td>"+"</tr>"
+                        }
+                        edges.push(edge)
+
+                    }
+                    str += "</tbody></table>"*/
+                    //draw();
+                })
+
                 }
              });
 
