--- a/neo/templates/near.html
+++ b/neo/templates/near.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>人际关系查询</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style type="text/css">
-    html, body {
-      font: 10pt arial;
-    }
-    #mynetwork {
-      width: 600px;
-      height: 600px;
-      border: 1px solid lightgray;
-    }
-    #mytable td{
-        padding:10px 18px
-    }
-    #mytable tbody tr:hover {  
-    background-color: #0180FE;  
-    color: #fff;  
-    cursor:pointer;  
-    }
-  
-.dataTable tr:hover td {background:none;}
-  </style>
-
+    <title>人际关系查询</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style type="text/css">
+        html, body {
+          font: 10pt arial;
+        }
+        #mynetwork {
+          width: 600px;
+          height: 600px;
+          border: 1px solid lightgray;
+        }
+        #mytable td{
+            padding:10px 18px
+        }
+        #mytable tbody tr .tname:hover  {
+        background-color: #0180FE;
+        color: #fff;
+        cursor:pointer;
+        }
+        .dataTable tr:hover td {background:none;}
+        em{
+            color:red;
+        }
+    </style>
     <script type="text/javascript" src="static/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="static/dist/vis.js"></script>
     <script type="text/javascript" src="static/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
@@ -43,12 +44,12 @@
 			<ul class="nav nav-tabs" style="margin-left:1%;">
 				<li class="active">
 					<a href="near.html">人际关系查询</a> </li>
-                <li><a href="path.html?id=扎克伯格&卡扎菲">六度查询</a></li>
+                <li><a href="path.html?id=扎克伯格&文继荣">六度查询</a></li>
 			</ul>
 		</div>
 	</div>
     <hr>
-     <div id="main-container" class="container" style="margin-left: 0;padding-left:0px;">
+     <div id="main-container" class="container" style="margin-left: 0;padding-left:0px;width:100%;">
         <div class="row">
             <div class="col-md-8 col-sm-12 col-xs-12">
                 <div class="panel panel-default">
@@ -76,11 +77,18 @@
                         </div>
                         <div class="panel-body">
                             <div id="mynetwork" class="center-block" style="width:100%"></div>
+                            <div class="popover right" role="tooltip" style="max-width:50%" id="mypopever">
+                                <div class="arrow" style="top: 30px"></div>
+                                <div class="popover-inner">
+                                    <div class="popover-title">My Title</div>
+                                    <div id="systemInfo" class="popover-content"></div>
+                                </div>
+                            </div>
                         </div>
                 </div>
             </div>
             <div class="col-md-4 col-sm-12 col-xs-12" >
-                <div class="panel panel-default" style="">
+                <div class="panel panel-default">
                     <div class="panel-heading">
                         <a class="btn btn-success"></a>
                     </div>
@@ -94,14 +102,36 @@
         </div>
      </div>
     <input type="hidden" id="hid" value="14"></input>
-
     <script type="text/javascript">
         var nodeset ;
         var nodes = [];
         var edges = [];
         var network = null;
         var maxn = 14;
+
+        $(window).resize(function() {
+            network.fit();
+        });
+        $(document).bind('keypress',function(e){
+            if(e.keyCode==13){
+                $("#btn-commit").trigger("click");
+            }
+        })
+        $('body').on('click', function(event) {
+            var target = $(event.target); // One jQuery object instead of 3
+
+            // Compare length with an integer rather than with
+            if (!target.hasClass('popover')
+                && target.parent('.popover-content').length === 0
+                && target.parent('.myPopover').length === 0
+                && target.parent('.popover-title').length === 0
+                && target.parent('.popover').length === 0 && target.attr("id") !== "folder") {
+                console.log("a");
+                    $('#mypopever').hide();
+                }
+        });
         $(document).ready(function(){
+            //模拟动态加载标题(真实情况可能会跟后台进行ajax交互)
             slide = $('#ex1').slider({
                 formatter: function(value) {
                     maxn = value;
@@ -111,8 +141,16 @@
             $("#ex1").on("slide", function(slideEvt) {
                 $("#hid").val(slideEvt.value);
             });
-            $("#btn-commit").click(function(){
+            $("#btn-commit").click(function(){/*
+                 $.get("http://183.174.228.21:1241/is_entity",{'name':'asdasdasd'}, function(data){
+                     console.log(data.status);
+                 });*/
                 var name = $("#pname").val();
+                 $(this).button("loading");
+                var lohtml = "<div class='progress progress-striped active' style='margin-top:40%'><div class='progress-bar progress-bar-success' role='progressbar'aria-valuenow='60' aria-valuemin='0' aria-valuemax='100'style='width: 40%;'> <span class='sr-only'>40% 完成</span> </div> <div>"
+                //lohtml = "html";
+                $("#mynetwork").html(lohtml);
+                $("#result").html("<h3><span id='resulttitle'>"+name+"的人际关系"+"</span></h3>");
                 if(name==""){
                     alert("请输入一个人的姓名！");
                     return ;
@@ -121,21 +159,24 @@
                 if(len>1){
                     if(name.split("&")[0]==""&&name.split("&")[1]!=""){
                         location.href="near.html?name="+name.split("&")[1];
+                        that.button("reset");
                         return ;
                     }
                     else if(name.split("&")[1]==""&&name.split("&")[0]!=""){
                         location.href="near.html?name="+name.split("&")[0];
+                        that.button("reset");
                         return ;
                     }
                     else{
                         window.location.href="path.html?ids="+name.split("&")[0]+"&"+name.split("&")[1];
+                        that.button("reset");
                         return ;
                     }
                 }
                 nodes = [];
                 edges = [];
                 network = [];
-                $("#resulttitle").html("<a href='"+"http://playbigdata.com/wwj/search2.aspx?q="+encodeURIComponent(name)+"&t='>"+name+"</a>"+"的人际关系")
+                $("#resulttitle").html("<a href='"+"http://playbigdata.com/fss3/search2.aspx?q="+encodeURIComponent(name)+"&t='>"+name+"</a>"+"的人际关系")
                 var maxnear = $("#ex1").val();
                 snode = {id:name,label:name,color:{background:"#ff9966"}};
                 nodes.push(snode);
@@ -144,33 +185,36 @@
                 if($("#optionsRadios1").is(":checked")){
                     mr = 0
                 }
+                var that = $(this)
                 $.get("http://183.174.228.21:1241/find_near",{'pname':name,'maxnear':maxn,'mr':mr}, function(ret){
                     console.log(ret)
-                    str = "<h3><span id='resulttitle'></span></h3><table class='table table-striped table-hover ' style='width:100%' id='mytable'><thead><th>姓名</th><th>亲密度</th><th>时事探针</th></thead><tbody>";
+                    str = "<h3><span id='resulttitle'></span></h3><table class='table table-striped table-hover ' style='width:100% ' id='mytable'><thead><th>姓名</th><th>亲密度</th><th>时事探针</th></thead><tbody>";
                     if(ret.length==0){
                         alert("没有找到这个人的信息，输一个我知道的人吧！");
+                        that.button("reset");
                         return ;
                     }
                     for(var i in ret){
                         if(ret[i]["end.name"] == name) continue;
                         node = {id:ret[i]["end.name"],label:ret[i]["end.name"]};
-                        edge = {from:ret[i]['n.name'],to:ret[i]["end.name"],value:ret[i]["r.value"],title:ret[i]["r.value"]}
+                        edge = {id:ret[i]['n.name']+"&"+ret[i]['end.name'],from:ret[i]['n.name'],to:ret[i]["end.name"],value:ret[i]["r.value"],title:ret[i]["r.value"]}
                         if(ret[i]['n.name'] == name){
                             nodes.push(node)
-                            str += "<tr class='mytr'><td>"+ ret[i]['end.name']+"</td>"+"<td>"+ret[i]["r.value"]+"</td>"+"<td><a href='"+
-                                "http://playbigdata.com/wwj/search2.aspx?q="+encodeURIComponent(ret[i]['end.name'])+"&t='>链接</a>"+"</td>"+"</tr>"
+                            str += "<tr class='mytr'><td class='tname'>"+ ret[i]['end.name']+"</td>"+"<td>"+ret[i]["r.value"]+"</td>"+"<td><a target='_blank' href='"+
+                                "http://playbigdata.com/fss3/search2.aspx?q="+encodeURIComponent(ret[i]['end.name'])+"&t='>链接</a>"+"</td>"+"</tr>"
                         }
                         edges.push(edge)
 
                     }
                     str += "</tbody></table>"
                     draw();
+                    that.button("reset");
                     $("#result").html(str);
-                $("#resulttitle").html("<a href='"+"http://playbigdata.com/wwj/search2.aspx?q="+encodeURIComponent(name)+"&t='>"+name+"</a>"+"的人际关系")
+                     $("#resulttitle").html("<a target='_blank' href='"+"http://playbigdata.com/fss3/search2.aspx?q="+encodeURIComponent(name)+"&t='>"+name+"</a>"+"的人际关系")
                     var table = 
                     $('#mytable').DataTable({
                         "paging": true,
-                        "iDisplayLength": 12, //默认每页数量
+                        "iDisplayLength":12, //默认每页数量
                         "bPaginate": true, //翻页功能
                         "bLengthChange": false, //改变每页显示数据数量
                         "bFilter": false, //过滤功能
@@ -180,6 +224,30 @@
                         "processing": true,
                         //"ordering": false,
                         "bSort": false,
+                         language: {
+                              "sProcessing": "处理中...",
+                              "sLengthMenu": "显示 _MENU_ 项结果",
+                              "sZeroRecords": "没有匹配结果",
+                              "sInfo": "显示第 _START_ 至 _END_ 项结果，共 _TOTAL_ 项",
+                              "sInfoEmpty": "显示第 0 至 0 项结果，共 0 项",
+                              "sInfoFiltered": "(由 _MAX_ 项结果过滤)",
+                              "sInfoPostFix": "",
+                              "sSearch": "搜索:",
+                              "sUrl": "",
+                              "sEmptyTable": "表中数据为空",
+                              "sLoadingRecords": "载入中...",
+                              "sInfoThousands": ",",
+                              "oPaginate": {
+                                  "sFirst": "首页",
+                                  "sPrevious": "上页",
+                                  "sNext": "下页",
+                                  "sLast": "末页"
+                              },
+                              "oAria": {
+                                  "sSortAscending": ": 以升序排列此列",
+                                  "sSortDescending": ": 以降序排列此列"
+                              }
+                          },
                         //"serverSide" : true,//服务器端进行分页处理的意思
                         //"bPaginate": true,
                         //"bProcessing": true
@@ -223,7 +291,7 @@
                         nodeset.update(clickNode); 
 
                     });
-                    $("#mytable tbody").on("click","tr",function()
+                    $("#mytable tbody").on("click","tr .tname",function()
                     {//给tr或者td添加click事件
                         //console.log("click!");
                         var data=table.row(this).data();//获取值的对象数据
@@ -242,7 +310,7 @@
                 $('#btn-commit').trigger("click");
             }
             else{
-                $("#pname").val("李克强");
+                $("#pname").val("窦志成");
                 $('#btn-commit').trigger("click");
             }
         });
@@ -274,15 +342,26 @@
                 layout:{
                     randomSeed:1,//配置每次生成的节点位置都一样，参数为数字1、2等
                 },
+
+                physics: {
+                    barnesHut: {
+                    damping: 0.5,
+                    },
+                    stabilization:{
+                    },
+                    minVelocity: 0.75
+                }
             };
             network = new vis.Network(container, data, options);
+
+
 
             network.on("doubleClick", function(params) {//双击事件
                 if (params.nodes.length != 0) {//确定为节点双击事件
                     var click_node_id = params.nodes[0];
 
                     maxn = $("#hid").val();
-                    var mr = 1;
+                    var mr = 0;
                     //remove_all_sub_nodes(click_node_id);
                     //console.log(click_node_id);
                     //$("#pname").val(click_node_id);
@@ -290,17 +369,40 @@
                     $.get("http://183.174.228.21:1241/find_near",{'pname':click_node_id,'maxnear':maxn,'mr':mr}, function(ret){
                     console.log(ret);
                     for(var i in ret){
-                        exist = 0
+                        exist1 = 0
                         for(var j in nodes){
-                            if(ret[i]['end.name'] == nodes[j]['id']){
-                                exist = 1;break;
+                            if(ret[i]['n.name'] == nodes[j]['id']){
+                                exist1 = 1;break;
                             }
                         }
-                        if(!exist){
+                        exist2 = 0;
+                        for(var j in nodes){
+                            if(ret[i]['end.name'] == nodes[j]['id']){
+                                exist2 = 1;break;
+                            }
+                        }
+                        if(!exist1){
+                            nodes.push({id:ret[i]['n.name'],label:ret[i]["n.name"]})
+                            //edges.push({from:ret[i]['n.name'],to:ret[i]['end.name'],value:ret[i]['r.value'],title:ret[i]['r.value']})
+                        }
+                        if(!exist2){
                             nodes.push({id:ret[i]['end.name'],label:ret[i]["end.name"]})
-                            edges.push({from:ret[i]['n.name'],to:ret[i]['end.name'],value:ret[i]['r.value'],title:ret[i]['r.value']})
+                        }
+
+                        id1 = ret[i]['n.name']+"&"+ret[i]['end.name'];
+                        id2 = ret[i]['end.name']+"&"+ret[i]['n.name']
+                        exist3 = 0;
+                        for(var j in edges){
+                            if(edges[j]['id'] == id1 || edges[j]['id'] == id2){
+                                exist3 = 1;break;
+                            }
+                        }
+                        console.log(exist3)
+                        if(!exist3){
+                            edges.push({id:ret[i]['n.name']+"&"+ret[i]['end.name'],from:ret[i]['n.name'],to:ret[i]['end.name'],value:ret[i]['r.value'],title:ret[i]['r.value']})
                         }
                     }
+                    console.log(edges)
                     draw();
                     //str = "<h3><span id='resulttitle'></span></h3><table class='table table-striped table-hover ' style='width:100%' id='mytable'><thead><th>姓名</th><th>亲密度</th><th>时事探针</th></thead><tbody>";
                     //if(ret.length==0){
@@ -324,11 +426,43 @@
                 })
 
                 }
+                else if(params.edges.length != 0){
+                    var click_edge_id = params.edges[0];
+                    console.log(click_edge_id);
+                    edge2names = click_edge_id.split("&");
+                    //window.open("http://playbigdata.com/fss3/search2.aspx?q="+encodeURIComponent(edge2names[0])+"+"+encodeURIComponent(edge2names[1])+"&t=")
+
+                    $.get("http://183.174.228.21:1241/getEdgeinfo",{sname:edge2names[0],tname:edge2names[1]},function(data){
+                        $('.popover-content').html("");
+                        console.log(data);
+
+                        $('.popover').show();
+                        var x = params.pointer.DOM.x;
+                        var y = params.pointer.DOM.y;
+                        $('.popover-title').html(edge2names[0]+"与"+edge2names[1]);
+
+                        if(data.length==0){
+                             $('.popover-content').html("未查询到相关信息");
+                            $('.popover').css('left', (x + 10) + 'px');
+                            $('.popover').css('top', (y - 20) + 'px');
+                            return ;
+                        }
+                        var str = ""
+                        for(var iter=0;iter<data.length;iter++){
+                            str+= "新闻"+(iter+1)+"：</br>";
+                            str+= "  时间："+data[iter]['TimeStr']+"</br>";
+                            str+="内容："+data[iter]['Text']+"</br>"+"-------------------</br>"
+                        }
+
+                        $('.popover-content').html(str);
+                        $('.popover').css('left', (x + 10) + 'px');
+                        $('.popover').css('top', (y - 20) + 'px');
+                    })
+                }
              });
 
         }
 
-        
     </script>
 </body>
 </html>
