--- a/neo/templates/path.html
+++ b/neo/templates/path.html
@@ -79,11 +79,11 @@
                         <div id="mynetwork" style="width:100%;">
 
                         </div>
-                        <div class="popover right" role="tooltip" style="max-width:50%" id="mypopever">
-                                <div class="arrow" style="top: 30px"></div>
-                                <div class="popover-inner">
-                                    <div class="popover-title">My Title</div>
-                                    <div id="systemInfo" class="popover-content"></div>
+                        <div class="popover right" role="tooltip" style="max-width:50%" id="mypopever1">
+                                <div class="arrow" style="top: 30px" id="arrow1"></div>
+                                <div class="popover-inner"  id="pinner1">
+                                    <div class="popover-title" id="ptitle1">My Title</div>
+                                    <div id="systemInfo" class="popover-content" id="pcontent1"></div>
                                 </div>
                         </div>
                     </div>
@@ -486,7 +486,7 @@
                         },
                     },
                     font:{
-                        size:40
+                        size:25
                     },
                     size:50
                 },
